--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.andreisilviudragnea.usagesplugin
-pluginName = usages-plugin
+pluginName = count-usages
 pluginRepositoryUrl = https://github.com/andreisilviudragnea/usages-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
@@ -16,7 +16,7 @@ platformVersion = 2023.1.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = org.intellij.scala:2023.1.16, com.intellij.java, org.jetbrains.kotlin, org.rust.lang:0.4.193.5352-231
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.1
